# PyKotor

./: .cursorignore  .cursorrules  .env  .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  BLENDER_IPC_MISSING_FEATURES.md  CONTRIBUTING.md  CONVENTIONS.md  GHIDRA_DOCUMENTATION_SETUP.md  POWERSHELL.md  README.md  REVERT_OVERLY_BROAD_LINKS.md  TRANSFER_NICKHUGI_REPO.md  WORKFLOW_VERIFICATION.md  apply_ghidra_documentation.py  check_pypi.py  debug_entry3_comment.py  debug_entry3_comment2.py  debug_entry3_ref.py  debug_entry3_ref2.py  debug_entry3_step.py  debug_entry3_trace.py  debug_mdl_diff.py  debug_mdl_timeout.py  document_functions.py  document_swkotor2_functions.py  ghidra_documentation_commands.txt  install_powershell.sh  install_python_venv.ps1  m12aa_lyt.txt  mdl_repo_map.txt  nss_update_output.txt  package-lock.json  process_functions.ps1  pykotor_repo_map.txt  pyproject.toml  pyrightconfig.json  (+18 more)
.cursor/: worktrees.json
Libraries/PyKotorEngine/: README.md  pyproject.toml
Libraries/PyKotorFont/: pyproject.toml  requirements.txt
Libraries/PyKotorFont/.github/workflows/: ci.yml  release.yml
Libraries/PyKotorFont/tests/: test_txi_tga_font.py
Tools/BatchPatcher/: BatchPatcher.code-workspace  pyproject.toml  requirements.txt  setup.py
Tools/BatchPatcher/.github/workflows/: ci.yml  release.yml
Tools/BatchPatcher/src/: __main__.py
Tools/BatchPatcher/src/batchpatcher/: __main__.py
Tools/BatchPatcher/src/batchpatcher/translate/: language_translator.py
Tools/GuiConverter/: pyproject.toml
Tools/GuiConverter/.github/workflows/: ci.yml  release.yml
Tools/GuiConverter/src/gui_converter/: __main__.py
Tools/HoloGenerator/: .gitignore  README.md  pyproject.toml  run_tests.sh  setup_dev.py
Tools/HoloGenerator/.github/workflows/: ci.yml  release.yml
Tools/HoloGenerator/src/hologenerator/: __main__.py
Tools/HoloGenerator/src/hologenerator/core/: changes_ini.py  differ.py  generator.py
Tools/HoloGenerator/src/hologenerator/gui/: main.py
Tools/HoloGenerator/src/hologenerator/tests/: __init__.py  test_cli.py  test_core.py  test_gui.py
Tools/HoloGenerator/web/: package-lock.json  package.json
Tools/HoloGenerator/web/src/: App.tsx  types.ts
Tools/HoloGenerator/web/src/__tests__/: diffUtils.test.ts
Tools/HoloPatcher/: HoloPatcher.code-workspace  README.md  pyproject.toml  requirements.txt
Tools/HoloPatcher/.github/workflows/: ci.yml  release.yml
Tools/HoloPatcher/src/: __main__.py
Tools/HoloPatcher/src/holopatcher/: __main__.py  app.py  cli.py  config.py  core.py
Tools/HoloPazaak/: .gitignore  README.md  pyproject.toml
Tools/HoloPazaak/.github/workflows/: ci.yml  release.yml
Tools/HoloPazaak/src/holopazaak/: __init__.py  __main__.py  app.py  config.py  main_app.py  main_settings.py
Tools/HolocronAI/: pyproject.toml  setup.py
Tools/HolocronAI/.github/workflows/: ci.yml  release.yml
Tools/HolocronToolset/: .cursorignore  .gitignore  HolocronToolset.code-workspace  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_tests.ps1  setup.py
Tools/HolocronToolset/src/: resources_rc.py
Tools/HolocronToolset/src/toolset/: __main__.py  config.py  main_app.py  main_init.py  main_settings.py  profiler_output.pstat  test_metal.indoor  toolset_profile_20251125_202342.txt  toolset_profile_20251129_183635.txt  toolset_profile_20251129_203241.txt  toolset_profile_20251130_080426.txt  toolset_profile_20251130_134242.txt  toolset_profile_20251130_214204.txt  toolset_profile_20251130_220424.txt  toolset_profile_20251201_193551.txt  toolset_profile_20251201_203443.txt  toolset_profile_20251203_001346.txt
Tools/HolocronToolset/src/ui/: convertui.py
Tools/HolocronToolset/tests/: conftest.py  test_editor_find_references.py  test_filesystem_view.py  test_htinstallation.py  test_optional_imports.py  test_reference_finder.py  test_reference_finder_comprehensive.py  test_reference_search_ui.py  test_ui_clone.py  test_ui_dialogs.py  test_ui_dialogs_extra.py  test_ui_main.py  test_ui_search.py  test_ui_settings.py  test_ui_windows.py
Tools/HolocronToolset/tests/blender/: __init__.py  test_blender_integration.py
Tools/HolocronToolset/tests/data/: debug_module_lookup.py  test_kit_generation.py  test_nss_editor_document.py
Tools/HolocronToolset/tests/gui/: test_editor_help.py
Tools/HolocronToolset/tests/test_files/: k_sup_galaxymap.nss  test_corrupted.2da.json
Tools/HolocronToolset/toolset/: __main__.py
Tools/HolocronToolset/toolset/data/: me_controls.py
Tools/HolocronToolset/toolset/kits/: genjson.py
Tools/KitGenerator/: README.md  pyproject.toml  requirements.txt  setup.py
Tools/KitGenerator/.github/workflows/: ci.yml  release.yml
Tools/KitGenerator/src/kitgenerator/: __init__.py  __main__.py  app.py  cli.py  extract.py  gui.py
Tools/KotorCLI/: .gitignore  CHANGELOG.md  CLI_COMMANDS_REFERENCE.md  IMPLEMENTATION_NOTES.md  KotorCLI.code-workspace  PYKOTOR_INTEGRATION.md  QUICKSTART.md  README.md  SUMMARY.md  VERIFICATION.md  pyproject.toml  requirements.txt  setup.py
Tools/KotorCLI/.github/workflows/: ci.yml  release.yml
Tools/KotorCLI/src/kotorcli/: __init__.py  __main__.py  app.py  archive_filter.py  cfg_parser.py  config.py  console.py  gui_converter.py  kit_generator.py  logger.py
Tools/KotorCLI/tests/: conftest.py  test_indoor_builder.py  test_indoor_extract_installation_modules.py  test_indoor_roundtrip_against_original.py  test_indoor_roundtrip_comparable.py  test_indoor_roundtrip_modulekit.py
Tools/KotorDiff/: README.md  pyproject.toml  recommended.txt  requirements.txt
Tools/KotorDiff/.github/workflows/: ci.yml  release.yml
Tools/KotorDiff/src/: integration_test.py
Tools/KotorDiff/src/kotordiff/: __init__.py  __main__.py  cli.py  config_generator.py  differ.py  gui.py  test_config_generator.py
Tools/KotorMCP/: .gitignore  README.md  pyproject.toml  requirements.txt
Tools/KotorMCP/.github/workflows/: ci.yml  release.yml
Tools/KotorMCP/src/kotormcp/: __init__.py  server.py
Tools/PyKotorGUI/: pyproject.toml
Tools/PyKotorGUI/src/pykotor_gui/: auto_gui.py
(+8656 files in other folders)
