[build-system]
requires = ["setuptools>=67.8.0,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykotorfont"
version = "2.0.0"
description = "Font rendering module for PyKotor - handles TXI/TGA font generation."
authors = [{name = "NickHugi"}]
maintainers = [{name = "th3w1zard1", email = "halomastar@gmail.com"}]
license = {text = "LGPL-3.0-or-later"}
keywords = [
    "kotor", "kotor1", "kotor2", "tsl",
    "font", "txi", "tga", "texture",
    "generation", "pykotor", "bioware",
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pykotor>=2.0.0",
    "pillow>=9.5; python_implementation == 'CPython'",
    "pillow>10,<11.1.0; python_implementation == 'PyPy'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/th3w1zard1/PyKotor"
Documentation = "https://github.com/th3w1zard1/PyKotor/wiki"
Repository = "https://github.com/th3w1zard1/PyKotor.git"
Issues = "https://github.com/th3w1zard1/PyKotor/issues"
Changelog = "https://github.com/th3w1zard1/PyKotor/releases"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

# Poetry configuration
[tool.poetry]
name = "pykotorfont"
version = "2.0.0"
description = "Font rendering extension for PyKotor"
authors = ["NickHugi", "Benjamin Auquite <halomastar@gmail.com>"]
maintainers = ["Benjamin Auquite <halomastar@gmail.com>"]
readme = "../../README.md"
license = "LGPL-3.0-or-later"
packages = [{ include = "pykotor", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
pykotor = "^2.0.0"
pillow = ">=9.5"

[tool.poetry.urls]
Homepage = "https://github.com/th3w1zard1/PyKotor"
Documentation = "https://github.com/th3w1zard1/PyKotor/wiki"
Repository = "https://github.com/th3w1zard1/PyKotor.git"
Issues = "https://github.com/th3w1zard1/PyKotor/issues"
