[build-system]
requires = ["setuptools>=42,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batchpatcher"
description = "A translator/font creator tool useful for patching/working with many files at once."
version = "2.2.1"
requires-python = ">=3.8"
dependencies = [
  "pykotor>=2.0.2",
  "setuptools>=67.8.0",
  "deep_translator==1.11.4",
  "deepl-cli>=1",
  "requests>=2.25.0,<2.32.0; python_version<\"3.9\"",
  "requests>=2.25.0; python_version>=\"3.9\"",
  "opencv-contrib-python==4.8.0.76",
  "notify-py==0.3.43",
  "playwright>=1.40.0,<1.49.1; python_version==\"3.8\"",
  "playwright>=1.49.1,<2; python_version>=\"3.9\"",
  "pyquery==2.0.1",
  "arabic-reshaper==3.0.0",
]
authors = [{ name = "NickHugi" }]
maintainers = [{ name = "th3w1zard1", email = "halomastar@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "LGPL-3.0-or-later" }
keywords = [
  "kotor", "kotor1", "kotor2", "tsl",
  "star-wars", "knights-of-the-old-republic",
  "batch", "translator", "font",
  "localization", "i18n", "pykotor",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment",
  "Topic :: Text Processing :: Linguistic",
  "Environment :: Console",
]

[project.scripts]
batchpatcher = "batchpatcher.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/OldRepublicDevs/PyKotor"
Documentation = "https://github.com/OldRepublicDevs/PyKotor/wiki"
Repository = "https://github.com/OldRepublicDevs/PyKotor.git"
Issues = "https://github.com/OldRepublicDevs/PyKotor/issues"
Changelog = "https://github.com/OldRepublicDevs/PyKotor/releases"

# Poetry configuration
[tool.poetry]
name = "batchpatcher"
version = "2.2.1"
description = "A translator/font creator tool useful for patching/working with many files at once."
authors = ["NickHugi", "Benjamin Auquite <halomastar@gmail.com>"]
maintainers = ["Benjamin Auquite <halomastar@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0-or-later"
packages = [{ include = "batchpatcher", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pykotor = "^2.0.2"
opencv-contrib-python = "4.8.0.76"

[tool.poetry.scripts]
batchpatcher = "batchpatcher.__main__:main"

[tool.poetry.urls]
Homepage = "https://github.com/OldRepublicDevs/PyKotor"
Repository = "https://github.com/OldRepublicDevs/PyKotor.git"
Issues = "https://github.com/OldRepublicDevs/PyKotor/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
