[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hologenerator"
version = "1.0.0"
description = "KOTOR Configuration Generator for HoloPatcher - GUI and CLI tool"
readme = "README.md"
authors = [
    {name = "th3w1zard1", email = "halomastar@gmail.com"}
]
maintainers = [{name = "th3w1zard1", email = "halomastar@gmail.com"}]
license = {text = "MIT"}
keywords = [
    "kotor", "kotor1", "kotor2", "tsl",
    "config", "generator", "holopatcher",
    "tslpatcher", "modding", "pykotor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Environment :: Console",
    "Environment :: Web Environment",
]
requires-python = ">=3.8"
dependencies = [
    "pykotor>=1.8.0",
]

[project.scripts]
hologenerator = "hologenerator.__main__:main"

[project.optional-dependencies]
gui = []  # tkinter is usually built-in
web = ["flask", "flask-cors"]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/th3w1zard1/PyKotor"
Documentation = "https://github.com/th3w1zard1/PyKotor/wiki"
Repository = "https://github.com/th3w1zard1/PyKotor.git"
Issues = "https://github.com/th3w1zard1/PyKotor/issues"
Changelog = "https://github.com/th3w1zard1/PyKotor/releases"

# Poetry configuration
[tool.poetry]
name = "hologenerator"
version = "1.0.0"
description = "KOTOR Configuration Generator for HoloPatcher - GUI and CLI tool"
authors = ["Benjamin Auquite <halomastar@gmail.com>"]
maintainers = ["Benjamin Auquite <halomastar@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "hologenerator", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
pykotor = "^1.8.0"

[tool.poetry.extras]
web = ["flask", "flask-cors"]

[tool.poetry.scripts]
hologenerator = "hologenerator.__main__:main"

[tool.poetry.urls]
Homepage = "https://github.com/th3w1zard1/PyKotor"
Repository = "https://github.com/th3w1zard1/PyKotor.git"
Issues = "https://github.com/th3w1zard1/PyKotor/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hologenerator = ["web/build/**/*"]