[build-system]
requires = ["setuptools>=42,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holopatcher"
description = "A faster, cross-platform alternative to TSLPatcher written in Python."
version = "2.0.0a2"
requires-python = ">= 3.8"
dependencies = [
    "pykotor>=2.0.0",
    "requests>=2.25.0,<2.32.0; python_version<\"3.9\"",
    "requests>=2.25.0; python_version>=\"3.9\"",
    "charset-normalizer>=2.0,<3.4",
]
authors = [{ name = "NickHugi" }]
maintainers = [{ name = "th3w1zard1", email = "halomastar@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "LGPL-3.0-or-later" }
keywords = [
    "kotor", "kotor1", "kotor2", "tsl",
    "star-wars", "knights-of-the-old-republic",
    "modding", "patcher", "installer",
    "tslpatcher", "holopatcher", "pykotor",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: System :: Software Distribution",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
]

[project.scripts]
holopatcher = "holopatcher.__main__:main"

[project.gui-scripts]
holopatcher-gui = "holopatcher.app:main"

[project.optional-dependencies]
updates = ["requests", "pycryptodome"]
rtf = ["pypandoc", "PyWebView"]
gui = [
    "PyQt5>=5.15; python_implementation == 'CPython'",
    "PySide6; python_implementation == 'PyPy'",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://deadlystream.com/files/file/2243-holopatcher/"
Documentation = "https://github.com/th3w1zard1/PyKotor/wiki/Installing-Mods-with-HoloPatcher"
Repository = "https://github.com/th3w1zard1/PyKotor.git"
Issues = "https://github.com/th3w1zard1/PyKotor/issues"
Changelog = "https://github.com/th3w1zard1/PyKotor/releases"

# Poetry configuration
[tool.poetry]
name = "holopatcher"
description = "A faster, cross-platform alternative to TSLPatcher written in Python."
version = "2.0.0a2"
authors = ["NickHugi", "Benjamin Auquite <halomastar@gmail.com>"]
maintainers = ["Benjamin Auquite <halomastar@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0-or-later"
packages = [{ include = "holopatcher", from = "src" }]
keywords = [
    "kotor", "tslpatcher", "holopatcher",
    "modding", "patcher", "pykotor",
]

[tool.poetry.dependencies]
python = "^3.8"
pykotor = "^2.0.0"
requests = ">=2.25.0"
charset-normalizer = ">=2.0,<3.4"

[tool.poetry.extras]
updates = ["requests", "pycryptodome"]
rtf = ["pypandoc", "PyWebView"]
gui = ["PyQt5"]

[tool.poetry.scripts]
holopatcher = "holopatcher.__main__:main"

[tool.poetry.urls]
Homepage = "https://github.com/th3w1zard1/PyKotor"
Documentation = "https://github.com/th3w1zard1/PyKotor/wiki"
Repository = "https://github.com/th3w1zard1/PyKotor.git"
Issues = "https://github.com/th3w1zard1/PyKotor/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
